--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@types/react-beautiful-dnd": "^13.1.4",
     "classnames": "^2.3.2",
     "firebase": "^9.18.0",
