--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll --coverage --runInBand --detectOpenHandles"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@types/react-beautiful-dnd": "^13.1.4",
     "classnames": "^2.3.2",
     "firebase": "^9.18.0",
+    "firebase-admin": "^11.9.0",
+    "firebase-functions": "^4.4.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
@@ -28,6 +31,7 @@
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.1",
+    "@types/jest": "^29.5.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.1",
@@ -38,6 +42,7 @@
     "eslint": "^8.41.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.5.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
@@ -47,8 +52,23 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.9.2",
     "tailwindcss": "^3.2.7",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.3.9",
     "vite-plugin-eslint": "^1.8.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
